--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -4,6 +4,12 @@
   grid-row: 1/-1;
   display: flex;
   justify-content: center;
+  @media only screen and (max-width: $bp-large) {
+    grid-column: 1/-1;
+    grid-row: 1 /2;
+    justify-content: flex-end;
+    align-items: center;
+  }
 }
 .nav-btn {
   border: none;
@@ -25,5 +31,8 @@
   }
   &::after {
     transform: translateY(1.5rem);
+  }
+  @media only screen and (max-width: $bp-large) {
+    margin: 0 3rem;
   }
 }
