--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,9 @@ body {
     .container {
       grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
       grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; } }
+  @media only screen and (max-width: 800px) {
+    .container {
+      grid-template-rows: 6rem calc(100vh - 6rem); } }
 
 .heading-1, .heading-2, .heading-3, .heading-4 {
   font-family: "Josefin Sans", sans-serif;
@@ -129,6 +132,12 @@ body {
   padding: 8rem;
   padding-top: 4rem;
   justify-content: center; }
+  @media only screen and (max-width: 800px) {
+    .header {
+      grid-column: 1/-1; } }
+  @media only screen and (max-width: 600px) {
+    .header {
+      padding: 5rem; } }
   .header__logo {
     height: 3rem;
     justify-self: center; }
@@ -165,12 +174,21 @@ body {
   align-content: center;
   justify-content: center;
   grid-row-gap: 2rem; }
+  @media only screen and (max-width: 800px) {
+    .realtors {
+      grid-column: 1/-1; } }
   .realtors__list {
     display: grid;
     grid-template-columns: min-content max-content;
     grid-column-gap: 2rem;
     grid-row-gap: 5vh;
     align-items: center; }
+    @media only screen and (max-width: 800px) {
+      .realtors__list {
+        grid-template-columns: repeat(3, min-content max-content); } }
+    @media only screen and (max-width: 600px) {
+      .realtors__list {
+        grid-template-columns: min-content max-content; } }
   .realtors__img {
     width: 7rem;
     border-radius: 50%;
@@ -210,12 +228,21 @@ body {
   grid-template-rows: repeat(6, 1fr);
   grid-template-columns: repeat(6, 1fr);
   align-items: center; }
+  @media only screen and (max-width: 800px) {
+    .story__pictures {
+      grid-column: 1/-1;
+      padding: 6rem; } }
 
 .story__img--1 {
   width: 100%;
   grid-row: 2/6;
   grid-column: 2/6;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
+  @media only screen and (max-width: 800px) {
+    .story__img--1 {
+      grid-column: 1/4;
+      grid-row: 1/-1;
+      width: 120%; } }
 
 .story__img--2 {
   width: 115%;
@@ -223,6 +250,11 @@ body {
   grid-column: 4/7;
   z-index: 20;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.3); }
+  @media only screen and (max-width: 800px) {
+    .story__img--2 {
+      grid-column: 4/7;
+      grid-row: 1/-1;
+      width: 100%; } }
 
 .story__content {
   background-color: #f9f7f6;
@@ -231,6 +263,10 @@ body {
   display: grid;
   align-content: center;
   justify-items: start; }
+  @media only screen and (max-width: 800px) {
+    .story__content {
+      grid-column: 1/-1;
+      grid-row: 5/6; } }
 
 .story__text {
   font-size: 1.5rem;
