--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -17,7 +17,8 @@ $font-display: 'Josefin Sans', sans-serif;
 //RESPONSIVE BREAKPOINTS
 $bp-largest: 1200px;
 $bp-large: 1000px;
-
+$bp-medium: 800px;
+$bp-small: 600px;
 //BASE
 *,
 *::before,
@@ -56,5 +57,8 @@ body {
       [center-end]
       minmax(6rem, 1fr)
       [full-end];
+  }
+  @media only screen and (max-width: $bp-medium) {
+    grid-template-rows: 6rem calc(100vh - 6rem);
   }
 }
