--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -11,12 +11,21 @@
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
     align-items: center;
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1/-1;
+      padding: 6rem;
+    }
   }
   &__img--1 {
     width: 100%;
     grid-row: 2/6;
     grid-column: 2/6;
     box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1/4;
+      grid-row: 1/-1;
+      width: 120%;
+    }
   }
   &__img--2 {
     width: 115%;
@@ -24,6 +33,11 @@
     grid-column: 4/7;
     z-index: 20;
     box-shadow: 0 2rem 5rem rgba(#000, 0.3);
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 4/7;
+      grid-row: 1/-1;
+      width: 100%;
+    }
   }
   &__content {
     background-color: $color-grey-light-1;
@@ -36,6 +50,10 @@
     display: grid;
     align-content: center;
     justify-items: start;
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1/-1;
+      grid-row: 5/6;
+    }
   }
   &__text {
     font-size: 1.5rem;
